@@ -1,0 +1,3 @@
+This tests that getComputedStyle will take box-sizing into account when computing the width and height of a box. 
+Test 1 Passed
+Test 2 Passed
